# rust-image-processor

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
src/: main.rs
src/server/: server.rs
src/services/: mod.rs  services.rs
