[package]
name = "rust-image-processor"
version = "0.1.0"
edition = "2021"

[dependencies]
image = "0.24.7"
actix-web = "4.4.1"
thiserror = "1.0.52"
url = "2.5.0"
env_logger = "0.10.1"
reqwest = { version = "0.12.28", features = ["json", "blocking"] }
serde = { version = "1.0.193", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
